--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.idea
 /node_modules
 /examples/loginParameters.json
+/examples/loginParameters.json.*
 /examples/npm-debug.log
 /caspertech-node-metaverse-*.tgz
 /npm-debug.log
